# relay-admin

./: .gitignore  Cargo.toml  README.md  update_schema.sh
.github/workflows/: lint.yaml  test.yaml
.reuse/templates/: rust.commented.jinja2
migrations/: Cargo.toml  diesel.toml
migrations/migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
migrations/migrations/2023-07-08-063107_create_servers_and_tags_table/: down.sql  up.sql
migrations/migrations/2023-07-08-064813_create_users_and_idp_table/: down.sql  up.sql
migrations/migrations/2023-07-08-072243_create_subscription_cfg_table/: down.sql  up.sql
migrations/src/: schema.rs
relay-admin/: Cargo.toml
relay-admin/src/: main.rs
relay-admin/src/api/: mod.rs
relay-admin/src/api/v1/: mod.rs
